@@ -39,7 +39,11 @@ gpasm_SOURCES = main.c
 
 gpasm_LDADD = libgpasm.a ${top_builddir}/@LIBGPUTILS@ ${top_builddir}/@LIBIBERTY@
 
+# Need to have -d alone (not -dvt) for automake magic
 AM_YFLAGS = -d -vt
 AM_LFLAGS = -i
+
+# Make sure we have parse.h when compiling other sources
+BUILT_SOURCES = parse.h
 
 CLEANFILES = parse.output
